[update] fixed registration button and register route

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from colorlib.com/preview/theme/amado/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Oct 2019 16:59:55 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
 <head>
 <meta charset="UTF-8">
 <meta name="description" content="">
@@ -27,9 +26,9 @@
 <div class="row">
 <div class="col-12">
 <div class="search-content">
-<form action="#" method="get">
-<input type="search" name="search" id="search" placeholder="Type your keyword...">
-<button type="submit"><img src="static/img/core-img/search.png" alt=""></button>
+<form action="#" method="GET">
+<input type="search" name="search" id="search" placeholder="Search for items..">
+<button type="Submit"><img src="static/img/core-img/search.png" alt=""></button>
 </form>
 </div>
 </div>
@@ -206,7 +205,7 @@
 <div class="col-12 col-lg-6 col-xl-7">
 <div class="newsletter-text mb-100">
 <h2>Subscribe for a <span>25% Discount</span></h2>
-<p>This will actually work pls dont abuse this lmao</p>
+<p>This will actually work pls dont abuse this LMFAO :) </p>
 </div>
 </div>
 
