--- a/templates/register.html
+++ b/templates/register.html
@@ -67,7 +67,11 @@
         <div class="limiter">
             <div class="container-login100">
                 <div class="wrap-login100 p-t-50 p-b-90">
-                    <form class="login100-form validate-form flex-sb flex-w">
+                    <form
+                        method='POST'
+                        action={{ url_for('register') }}
+                        class="login100-form validate-form flex-sb flex-w"
+                    >
                         <span class="login100-form-title p-b-51">
                             Sign Up
                         </span>
@@ -119,7 +123,7 @@
                         </div>
 
                         <div class="container-login100-form-btn m-t-17">
-                            <button class="login100-form-btn">
+                            <button type="submit" class="login100-form-btn">
                                 Sign Up
                             </button>
                         </div>
