[update] finished login/register and password encryption

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,7 @@
 <li class="active"><a href="#">Home</a></li>
 <!-- <li><a href="#">Shop</a></li> -->
 <li><a href="/register">Register</a></li>
+<li><a href="/login">Login</a></li>
 <!-- <li><a href="#">Cart</a></li>
 <li><a href="#">Checkout</a></li> -->
 </ul>
