--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,7 +14,7 @@
 
 <link rel="icon" href="img/core-img/favicon.ico">
 
-<link rel="stylesheet" href="css/core-style.css">
+<link rel="stylesheet" href="static/css/core-style.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
