--- a/templates/register.html
+++ b/templates/register.html
@@ -1,157 +1,220 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Mirrored from colorlib.com/etc/lf/Login_v9/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 05 Oct 2019 08:57:17 GMT -->
+    <!-- Added by HTTrack --><meta
+        http-equiv="content-type"
+        content="text/html;charset=UTF-8"
+    /><!-- /Added by HTTrack -->
     <head>
-        <title>Login</title>
+        <title>Register</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!--===============================================================================================-->
+
         <link
             rel="icon"
             type="image/png"
             href="static/images/icons/favicon.ico"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/vendor/bootstrap/css/bootstrap.min.css"
+            href="static/vendor/strap/css/bootstrap.min.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
             href="static/fonts/font-awesome-4.7.0/css/font-awesome.min.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/fonts/Linearicons-Free-v1.0.0/icon-font.min.css"
+            href="static/fonts/iconic/css/material-design-iconic-font.min.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/vendor/animate/animate.css"
+            href="static/vendor/ani/animate.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/vendor/css-hamburgers/hamburgers.min.css"
+            href="static/vendor/hamburgers/hamburgers.min.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/vendor/animsition/css/animsition.min.css"
+            href="static/vendor/animation/css/animsition.min.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/vendor/select2/select2.min.css"
+            href="static/vendor/select3/select2.min.css"
         />
-        <!--===============================================================================================-->
+
         <link
             rel="stylesheet"
             type="text/css"
-            href="static/vendor/daterangepicker/daterangepicker.css"
+            href="static/vendor/picker/daterangepicker.css"
         />
-        <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="static/css/util.css" />
-        <link rel="stylesheet" type="text/css" href="static/css/main.css" />
-        <!--===============================================================================================-->
+
+        <link rel="stylesheet" type="text/css" href="static/css/up.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/sign.css" />
     </head>
     <body>
-        <div class="limiter">
-            <div class="container-login100">
-                <div class="wrap-login100 p-t-50 p-b-90">
-                    <form
-                        method='POST'
-                        action={{url_for('register') }}
-                        class="login100-form validate-form flex-sb flex-w"
+        <div
+            class="container-login100"
+            style="background-image: url('static/images/bg-01.jpg');"
+        >
+            <div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
+                <form
+                    method="POST"
+                    action="{{ url_for('register') }}"
+                    class="login100-form validate-form"
+                >
+                    <span class="login100-form-title p-b-37">
+                        Sign up
+                    </span>
+                    <div
+                        class="wrap-input100 validate-input m-b-20"
+                        data-validate="Enter username or email"
                     >
-                        <span class="login100-form-title p-b-51">
-                            Sign Up
+                        <input
+                            id="email"
+                            class="input100"
+                            type="text"
+                            name="email"
+                            placeholder="username or email"
+                        />
+                        <span class="focus-input100"></span>
+                    </div>
+                    <div
+                        class="wrap-input100 validate-input m-b-25"
+                        data-validate="Enter password"
+                    >
+                        <input
+                            id="password"
+                            class="input100"
+                            type="password"
+                            name="password"
+                            placeholder="password"
+                        />
+                        <span class="focus-input100"></span>
+                    </div>
+                    <div
+                        class="wrap-input100 validate-input m-b-25"
+                        data-validate="Enter password"
+                    >
+                        <input
+                            id="confirm_password"
+                            class="input100"
+                            type="password"
+                            name="confirm_password"
+                            placeholder="confirm password"
+                        />
+                        <span class="focus-input100"></span>
+                    </div>
+                    <div class="container-login100-form-btn">
+                        <button type="submit" class="login100-form-btn">
+                            Sign up
+                        </button>
+                    </div>
+                    <div class="text-center p-t-57 p-b-20">
+                        <span class="txt1">
+                            Or sign up with
                         </span>
-                        {% if user_exists %}
-                        <script> alert('That email exists already') </script>
-                        <p style="color:red;">That email has already been used</p>
-                        {% endif %}
-                        <div
-                            class="wrap-input100 validate-input m-b-16"
-                            data-validate="Username is required"
+                    </div>
+                    <div class="flex-c p-b-112">
+                        <a href="#" class="login100-social-item">
+                            <i class="fa fa-facebook-f"></i>
+                        </a>
+                        <a
+                            href="{{ url_for('google') }}"
+                            class="login100-social-item"
                         >
-                            <input
-                                class="input100"
-                                type="text"
-                                name="email"
-                                placeholder="email address"
+                            <img
+                                src="static/images/icons/icon-google.png"
+                                alt="GOOGLE"
                             />
-                            <span class="focus-input100"></span>
-                        </div>
-
-                        <div
-                            class="wrap-input100 validate-input m-b-16"
-                            data-validate="Password is required"
-                        >
-                            <input
-                                class="input100"
-                                type="password"
-                                name="password"
-                                placeholder="Password"
-                            />
-                            <span class="focus-input100"></span>
-                        </div>
-
-                        <div class="flex-sb-m w-full p-t-3 p-b-24">
-                            <div class="contact100-form-checkbox">
-                                <input
-                                    class="input-checkbox100"
-                                    id="ckb1"
-                                    type="checkbox"
-                                    name="remember-me"
-                                />
-                                <label class="label-checkbox100" for="ckb1">
-                                    Remember me
-                                </label>
-                            </div>
-
-                            <div>
-                                <a href="#" class="txt1">
-                                    Forgot?
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="container-login100-form-btn m-t-17">
-                            <button type="submit" class="login100-form-btn">
-                                Sign Up
-                            </button>
-                        </div>
-                    </form>
-                </div>
+                        </a>
+                    </div>
+                    <div class="text-center">
+                        <a href="{{ url_for('login') }}" class="txt2 hov1">
+                            Login
+                        </a>
+                    </div>
+                </form>
             </div>
         </div>
-
         <div id="dropDownSelect1"></div>
 
-        <!--===============================================================================================-->
-        <script src="static/vendor/jquery/jquery-3.2.1.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="static/vendor/animsition/js/animsition.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="static/vendor/bootstrap/js/popper.js"></script>
-        <script src="static/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="static/vendor/select2/select2.min.js"></script>
-        <!--===============================================================================================-->
-        <script src="static/vendor/daterangepicker/moment.min.js"></script>
-        <script src="static/vendor/daterangepicker/daterangepicker.js"></script>
-        <!--===============================================================================================-->
-        <script src="static/vendor/countdowntime/countdowntime.js"></script>
-        <!--===============================================================================================-->
-        <script src="static/js/main.js"></script>
+        <script
+            src="static/vendor/jquery/jquery-3.2.1.min.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            src="static/vendor/animation/js/animsition.min.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            src="static/vendor/strap/js/popper.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+        <script
+            src="static/vendor/strap/js/bootstrap.min.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            src="static/vendor/select3/select2.min.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            src="static/vendor/picker/moment.min.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+        <script
+            src="static/vendor/picker/daterangepicker.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            src="static/vendor/downtime/countdowntime.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            src="static/js/register.js"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"
+            type="3cb5ff6a2b0ff8bbcf839d54-text/javascript"
+        ></script>
+        <script type="3cb5ff6a2b0ff8bbcf839d54-text/javascript">
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-23581568-13');
+        </script>
+        <script
+            src="https://ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js"
+            data-cf-settings="3cb5ff6a2b0ff8bbcf839d54-|49"
+            defer=""
+        ></script>
     </body>
+
+    <!-- Mirrored from colorlib.com/etc/lf/Login_v9/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 05 Oct 2019 08:57:39 GMT -->
 </html>
