--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 
 <head>
+<meta name="google-site-verification" content="1d-o58PRA5zfn07lgfD8ORn2S8k1kwD_5bZvRULuSc0" />
 <meta charset="UTF-8">
 <meta name="description" content="">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
