--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,6 @@
 
 
 <head>
-<meta name="google-site-verification" content="1d-o58PRA5zfn07lgfD8ORn2S8k1kwD_5bZvRULuSc0">
 <meta charset="UTF-8">
 <meta name="description" content="">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,9 +41,6 @@
 
 <div class="mobile-nav">
 
-<!--<div class="amado-navbar-brand">
-<a href="index-2.html"><img src="img/core-img/logo.png" alt=""></a>
-</div> -->
 
 <div class="amado-navbar-toggler">
 <span></span><span></span><span></span>
@@ -61,7 +57,7 @@
 <nav class="amado-nav">
 <ul>
 <li class="active"><a href="#">Home</a></li>
-<!-- <li><a href="#">Shop</a></li> -->
+
 <li><a href="/register">Register</a></li>
 <li><a href="/login">Login</a></li>
 <!-- <li><a href="#">Cart</a></li>
@@ -213,7 +209,7 @@
 
 <div class="col-12 col-lg-6 col-xl-5">
 <div class="newsletter-form mb-100">
-<form action={{url_for('email')}} method="POST">
+<form action="{{url_for('email')}}" method="POST">
 <input type="email" class="nl-email" placeholder="Your E-mail" name="email">
 <input type="submit" value="email">
 </form>
@@ -235,14 +231,14 @@
 
 <script src="static/js/active.js" type="6ef230948eb55c18c5bd0ec7-text/javascript"></script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="6ef230948eb55c18c5bd0ec7-text/javascript"></script>
-<script type="6ef230948eb55c18c5bd0ec7-text/javascript">
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="6ef230948eb55c18c5bd0ec7-text/javascript"></script> -->
+<!-- <script type="6ef230948eb55c18c5bd0ec7-text/javascript">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-23581568-13');
-</script>
+</script> --> 
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js" data-cf-settings="6ef230948eb55c18c5bd0ec7-|49" defer=""></script></body>
 
 
