--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-<title>Amado - Furniture Ecommerce Template | Cart</title>
+<title>Cart</title>
 
 <link rel="icon" href="img/core-img/favicon.ico">
 
