--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -63,29 +63,28 @@
 <li><a href="{{ url_for('logout') }}">Logout</a></li>
 
 <li><a href="#">Cart <span id="lilcart">{{cart}}</span></a></li>
-<li><a href="#">Checkout</a></li>
+<!-- <li><a href="#">Checkout</a></li> -->
 </ul>
 </nav>
 
 <div class="cart-fav-search mb-100">
 <!-- <a href="#" class="cart-nav"><img src="static/img/core-img/cart.png" alt=""> Cart <span>(0)</span></a> -->
-<a href="#" class="fav-nav"><img src="static/img/core-img/favorites.png" alt=""> Favourite</a>
+<!-- <a href="#" class="fav-nav"><img src="static/img/core-img/favorites.png" alt=""> Favourite</a> -->
 <a href="#" class="search-nav"><img src="static/img/core-img/search.png" alt=""> Search</a>
 </div>
 
-<!-- <div class="social-info d-flex justify-content-between">
+<div class="social-info d-flex justify-content-between">
 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-</div> -->
+</div>
 </header>
  
 
 <div class="products-catagories-area clearfix">
 <div class="amado-pro-catagory clearfix">
-<!-- <form id="modernchair" method='POST'></form> -->
-<div id="modernchaircontainer" class="single-products-catagory clearfix">
+<div class="single-products-catagory clearfix">
 <a href="#"></a>
 <img src="static/img/bg-img/1.jpg" alt="">
 
@@ -95,10 +94,7 @@
 <p>From $180</p>
 <h4>Modern Chair</h4>
 <button id="modernchair" class="btn">Add to cart</button>
-
-<!-- </form> -->
 </div>
-</a>
 </div>
 
 <div class="single-products-catagory clearfix">
