--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -85,7 +85,7 @@
 <div class="products-catagories-area clearfix">
 <div class="amado-pro-catagory clearfix">
 <div class="single-products-catagory clearfix">
-<a href="#"></a>
+<a href="#">
 <img src="static/img/bg-img/1.jpg" alt="">
 
 <div class="hover-content">
@@ -95,6 +95,7 @@
 <h4>Modern Chair</h4>
 <button id="modernchair" class="btn">Add to cart</button>
 </div>
+</a>
 </div>
 
 <div class="single-products-catagory clearfix">
