--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -73,12 +73,12 @@
 <a href="#" class="search-nav"><img src="static/img/core-img/search.png" alt=""> Search</a>
 </div>
 
-<div class="social-info d-flex justify-content-between">
+<!-- <div class="social-info d-flex justify-content-between">
 <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-</div>
+</div> -->
 </header>
  
 
