--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from colorlib.com/preview/theme/amado/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Oct 2019 17:00:43 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8">
 <meta name="description" content="">
@@ -12,10 +10,10 @@
 
 <title>Cart</title>
 
-<link rel="icon" href="img/core-img/favicon.ico">
+<link rel="icon" href="static/img/core-img/favicon.ico">
 
 <link rel="stylesheet" href="static/css/core-style.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="static/style.css">
 </head>
 <body>
 
@@ -29,7 +27,7 @@
 <div class="search-content">
 <form action="#" method="get">
 <input type="search" name="search" id="search" placeholder="Type your keyword...">
-<button type="submit"><img src="img/core-img/search.png" alt=""></button>
+<button type="submit"><img src="static/img/core-img/search.png" alt=""></button>
 </form>
 </div>
 </div>
@@ -42,9 +40,9 @@
 
 <div class="mobile-nav">
 
-<div class="amado-navbar-brand">
-<a href="index-2.html"><img src="img/core-img/logo.png" alt=""></a>
-</div>
+<!-- <div class="amado-navbar-brand">
+<a href="index-2.html"><img src="static/img/core-img/logo.png" alt=""></a>
+</div> -->
 
 <div class="amado-navbar-toggler">
 <span></span><span></span><span></span>
@@ -57,15 +55,15 @@
 <i class="fa fa-close" aria-hidden="true"></i>
 </div>
 
-<div class="logo">
-<a href="index-2.html"><img src="img/core-img/logo.png" alt=""></a>
-</div>
+<!-- <div class="logo">
+<a href="index-2.html"><img src="static/img/core-img/logo.png" alt=""></a>
+</div> -->
 
 <nav class="amado-nav">
 <ul>
-<li><a href="index-2.html">Home</a></li>
-<li><a href="shop.html">Shop</a></li>
-<li><a href="product-details.html">Product</a></li>
+<li><a href="/">Home</a></li>
+
+
 <li class="active"><a href="cart.html">Cart</a></li>
 <li><a href="checkout.html">Checkout</a></li>
 </ul>
@@ -77,17 +75,11 @@
 </div>
 
 <div class="cart-fav-search mb-100">
-<a href="cart.html" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
-<a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Favourite</a>
-<a href="#" class="search-nav"><img src="img/core-img/search.png" alt=""> Search</a>
+<a href="cart.html" class="cart-nav"><img src="static/img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
+<a href="#" class="fav-nav"><img src="static/img/core-img/favorites.png" alt=""> Favourite</a>
+<a href="#" class="search-nav"><img src="static/img/core-img/search.png" alt=""> Search</a>
 </div>
 
-<div class="social-info d-flex justify-content-between">
-<a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-</div>
 </header>
  
 <div class="cart-table-area section-padding-100">
@@ -110,7 +102,7 @@
 <tbody>
 <tr>
 <td class="cart_product_img">
-<a href="#"><img src="img/bg-img/cart1.jpg" alt="Product"></a>
+<a href="#"><img src="static/img/bg-img/cart1.jpg" alt="Product"></a>
 </td>
 <td class="cart_product_desc">
 <h5>White Modern Chair</h5>
@@ -131,7 +123,7 @@
 </tr>
 <tr>
 <td class="cart_product_img">
-<a href="#"><img src="img/bg-img/cart2.jpg" alt="Product"></a>
+<a href="#"><img src="static/img/bg-img/cart2.jpg" alt="Product"></a>
 </td>
 <td class="cart_product_desc">
 <h5>Minimal Plant Pot</h5>
@@ -152,7 +144,7 @@
 </tr>
 <tr>
 <td class="cart_product_img">
-<a href="#"><img src="img/bg-img/cart3.jpg" alt="Product"></a>
+<a href="#"><img src="static/img/bg-img/cart3.jpg" alt="Product"></a>
 </td>
 <td class="cart_product_desc">
 <h5>Minimal Plant Pot</h5>
@@ -226,7 +218,7 @@
 <div class="single_widget_area">
 
 <div class="footer-logo mr-50">
-<a href="index-2.html"><img src="img/core-img/logo2.png" alt=""></a>
+<a href="index-2.html"><img src="static/img/core-img/logo2.png" alt=""></a>
 </div>
 
 <p class="copywrite">
@@ -244,7 +236,7 @@ Copyright &copy;<script type="3b61281cb66cedf27aad9b00-text/javascript">document
 <div class="collapse navbar-collapse" id="footerNavContent">
 <ul class="navbar-nav ml-auto">
 <li class="nav-item active">
-<a class="nav-link" href="index-2.html">Home</a>
+<a class="nav-link" href="/">Home</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="shop.html">Shop</a>
@@ -269,15 +261,15 @@ Copyright &copy;<script type="3b61281cb66cedf27aad9b00-text/javascript">document
 </footer>
 
 
-<script src="js/jquery/jquery-2.2.4.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
+<script src="static/js/jquery/jquery-2.2.4.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 
-<script src="js/popper.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
+<script src="static/js/popper.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 
-<script src="js/bootstrap.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
+<script src="static/js/bootstrap.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 
-<script src="js/plugins.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
+<script src="static/js/plugins.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 
-<script src="js/active.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
+<script src="static/js/active.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 <script type="3b61281cb66cedf27aad9b00-text/javascript">
