--- a/templates/register.html
+++ b/templates/register.html
@@ -148,7 +148,16 @@
                         <a href="{{ url_for('login') }}" class="txt2 hov1">
                             Login
                         </a>
+                        
                     </div>
+                    <div class="text-center">
+                            <a href="{{ url_for('index') }}" class="txt2 hov1">
+                                Home
+                            </a>
+                            
+                        </div>
+                </div>
+                
                 </form>
             </div>
         </div>
