--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -214,7 +214,7 @@
 <div class="col-12 col-lg-6 col-xl-7">
 <div class="newsletter-text mb-100">
 <h2>Subscribe for a <span>25% Discount</span></h2>
-<p>This will actually work pls dont abuse this LMFAO :) </p>
+<p>This actually works pls dont abuse this LMFAO :) </p>
 </div>
 </div>
 
