[update] added relational db routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
             <div class="amado-pro-catagory clearfix">
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/1.jpg" alt="">
+                     <img src="static/img/bg-img/1.jpg" alt="180">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $180</p>
@@ -74,7 +74,7 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/2.jpg" alt="">
+                     <img src="static/img/bg-img/2.jpg" alt="180">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $180</p>
@@ -84,7 +84,7 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/3.jpg" alt="">
+                     <img src="static/img/bg-img/3.jpg" alt="180">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $180</p>
@@ -94,7 +94,7 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/4.jpg" alt="">
+                     <img src="static/img/bg-img/4.jpg" alt="180">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $180</p>
@@ -104,17 +104,17 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/5.jpg" alt="">
+                     <img src="static/img/bg-img/5.jpg" alt="190">
                      <div class="hover-content">
                         <div class="line"></div>
-                        <p>From $18</p>
+                        <p>From $190</p>
                         <h4>Plant Pot</h4>
                      </div>
                   </a>
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/6.jpg" alt="">
+                     <img src="static/img/bg-img/6.jpg" alt="320">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $320</p>
@@ -124,7 +124,7 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/7.jpg" alt="">
+                     <img src="static/img/bg-img/7.jpg" alt="318">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $318</p>
@@ -134,7 +134,7 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/8.jpg" alt="">
+                     <img src="static/img/bg-img/8.jpg" alt="318">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $318</p>
@@ -144,7 +144,7 @@
                </div>
                <div class="single-products-catagory clearfix">
                   <a href="#">
-                     <img src="static/img/bg-img/9.jpg" alt="">
+                     <img src="static/img/bg-img/9.jpg" alt="318">
                      <div class="hover-content">
                         <div class="line"></div>
                         <p>From $318</p>
