--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -86,10 +86,8 @@
 <div class="amado-pro-catagory clearfix">
 <div class="single-products-catagory clearfix">
 <a href="#">
-<img class = "modernchair" src="static/img/bg-img/1.jpg" alt="">
-
+<img src="static/img/bg-img/1.jpg" alt="">
 <div class="hover-content">
-
 <div class="line"></div>
 <p>From $180</p>
 <h4>Modern Chair</h4>
@@ -214,7 +212,7 @@
 <div class="col-12 col-lg-6 col-xl-7">
 <div class="newsletter-text mb-100">
 <h2>Subscribe for a <span>25% Discount</span></h2>
-<p>This actually works pls dont abuse this LMFAO :) </p>
+<p>This actually work pls dont abuse this LMFAO :) </p>
 </div>
 </div>
 
