--- a/templates/cart.html
+++ b/templates/cart.html
@@ -69,10 +69,10 @@
 </ul>
 </nav>
 
-<div class="amado-btn-group mt-30 mb-100">
+<!-- <div class="amado-btn-group mt-30 mb-100">
 <a href="#" class="btn amado-btn mb-15">%Discount%</a>
 <a href="#" class="btn amado-btn active">New this week</a>
-</div>
+</div> -->
 
 <div class="cart-fav-search mb-100">
 <a href="cart.html" class="cart-nav"><img src="static/img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
