--- a/templates/cart.html
+++ b/templates/cart.html
@@ -64,8 +64,8 @@
 <li><a href="/">Home</a></li>
 
 
-<li class="active"><a href="cart.html">Cart</a></li>
-<li><a href="checkout.html">Checkout</a></li>
+<li class="active"><a href="{{url_for('cart')}}">Cart</a></li>
+<!-- <li><a href="checkout.html">Checkout</a></li> -->
 </ul>
 </nav>
 
@@ -75,9 +75,7 @@
 </div> -->
 
 <div class="cart-fav-search mb-100">
-<a href="cart.html" class="cart-nav"><img src="static/img/core-img/cart.png" alt=""> Cart <span>(0)</span></a>
-<a href="#" class="fav-nav"><img src="static/img/core-img/favorites.png" alt=""> Favourite</a>
-<a href="#" class="search-nav"><img src="static/img/core-img/search.png" alt=""> Search</a>
+<a href="cart.html" class="cart-nav"><img src="static/img/core-img/cart.png" alt=""> Cart <span>({{cart}})</span></a>
 </div>
 
 </header>
