--- a/templates/login2.html
+++ b/templates/login2.html
@@ -6,7 +6,7 @@
         content="text/html;charset=UTF-8"
     /><!-- /Added by HTTrack -->
     <head>
-        <title>Login</title>
+        <title>Register</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -75,7 +75,7 @@
             <div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
                 <form
                     method="POST"
-                    action="{{ url_for('login') }}"
+                    action="{{ url_for('register') }}"
                     class="login100-form validate-form"
                 >
                     <span class="login100-form-title p-b-37">
@@ -107,7 +107,7 @@
                         />
                         <span class="focus-input100"></span>
                     </div>
-                    </div>
+                  
                     <div class="container-login100-form-btn">
                         <button type="submit" class="login100-form-btn">
                             Login
@@ -133,8 +133,8 @@
                         </a>
                     </div>
                     <div class="text-center">
-                        <a href="{{ url_for('login') }}" class="txt2 hov1">
-                            Login
+                        <a href="{{ url_for('register') }}" class="txt2 hov1">
+                            Register
                         </a>
                         
                     </div>
