--- a/templates/cart.html
+++ b/templates/cart.html
@@ -94,73 +94,37 @@
 <th></th>
 <th>Name</th>
 <th>Price</th>
-<th>Quantity</th>
+<!-- <th></th> -->
 </tr>
 </thead>
 <tbody>
-<tr>
+{%for y in ids%}
+<div id={{y}}>
+{% endfor %}
+{% for x in items%}
+<tr id="{{y}}">
 <td class="cart_product_img">
-<a href="#"><img src="static/img/bg-img/cart1.jpg" alt="Product"></a>
+<a href="#"><img src="{{x['src']}}"" alt="Product"></a>
 </td>
-<td class="cart_product_desc">
-<h5>White Modern Chair</h5>
+<td id=class="cart_product_desc">
+<h5>{{x['name']}}</h5>
 </td>
 <td class="price">
-<span>$130</span>
+<span>{{x['cost']}}</span>
 </td>
 <td class="qty">
-<div class="qty-btn d-flex">
-<p>Qty</p>
+
 <div class="quantity">
-<span class="qty-minus" onclick="if (!window.__cfRLUnblockHandlers) return false; var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;" data-cf-modified-3b61281cb66cedf27aad9b00-=""><i class="fa fa-minus" aria-hidden="true"></i></span>
-<input type="number" class="qty-text" id="qty" step="1" min="1" max="300" name="quantity" value="1">
-<span class="qty-plus" onclick="if (!window.__cfRLUnblockHandlers) return false; var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;" data-cf-modified-3b61281cb66cedf27aad9b00-=""><i class="fa fa-plus" aria-hidden="true"></i></span>
+        <button id=""  class="btn" onClick="del()">Delete</button>
 </div>
 </div>
 </td>
 </tr>
-<tr>
-<td class="cart_product_img">
-<a href="#"><img src="static/img/bg-img/cart2.jpg" alt="Product"></a>
-</td>
-<td class="cart_product_desc">
-<h5>Minimal Plant Pot</h5>
-</td>
-<td class="price">
-<span>$10</span>
-</td>
-<td class="qty">
-<div class="qty-btn d-flex">
-<p>Qty</p>
-<div class="quantity">
-<span class="qty-minus" onclick="if (!window.__cfRLUnblockHandlers) return false; var effect = document.getElementById('qty2'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;" data-cf-modified-3b61281cb66cedf27aad9b00-=""><i class="fa fa-minus" aria-hidden="true"></i></span>
-<input type="number" class="qty-text" id="qty2" step="1" min="1" max="300" name="quantity" value="1">
-<span class="qty-plus" onclick="if (!window.__cfRLUnblockHandlers) return false; var effect = document.getElementById('qty2'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;" data-cf-modified-3b61281cb66cedf27aad9b00-=""><i class="fa fa-plus" aria-hidden="true"></i></span>
+
+{% endfor %}
+{% for z in ids%}
 </div>
-</div>
-</td>
-</tr>
-<tr>
-<td class="cart_product_img">
-<a href="#"><img src="static/img/bg-img/cart3.jpg" alt="Product"></a>
-</td>
-<td class="cart_product_desc">
-<h5>Minimal Plant Pot</h5>
-</td>
-<td class="price">
-<span>$10</span>
-</td>
-<td class="qty">
-<div class="qty-btn d-flex">
-<p>Qty</p>
-<div class="quantity">
-<span class="qty-minus" onclick="if (!window.__cfRLUnblockHandlers) return false; var effect = document.getElementById('qty3'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;" data-cf-modified-3b61281cb66cedf27aad9b00-=""><i class="fa fa-minus" aria-hidden="true"></i></span>
-<input type="number" class="qty-text" id="qty3" step="1" min="1" max="300" name="quantity" value="1">
-<span class="qty-plus" onclick="if (!window.__cfRLUnblockHandlers) return false; var effect = document.getElementById('qty3'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;" data-cf-modified-3b61281cb66cedf27aad9b00-=""><i class="fa fa-plus" aria-hidden="true"></i></span>
-</div>
-</div>
-</td>
-</tr>
+{% endfor %}
 </tbody>
 </table>
 </div>
@@ -169,12 +133,12 @@
 <div class="cart-summary">
 <h5>Cart Total</h5>
 <ul class="summary-table">
-<li><span>subtotal:</span> <span>$140.00</span></li>
+<li><span>subtotal:</span> <span>${{total}}</span></li>
 <li><span>delivery:</span> <span>Free</span></li>
-<li><span>total:</span> <span>$140.00</span></li>
+<li><span>total:</span> <span>${{total}}</span></li>
 </ul>
 <div class="cart-btn mt-100">
-<a href="cart.html" class="btn amado-btn w-100">Checkout</a>
+<a href="#" class="btn amado-btn w-100">Checkout</a>
 </div>
 </div>
 </div>
@@ -184,79 +148,9 @@
 </div>
 
 
-<section class="newsletter-area section-padding-100-0">
-<div class="container">
-<div class="row align-items-center">
-
-<div class="col-12 col-lg-6 col-xl-7">
-<div class="newsletter-text mb-100">
-<h2>Subscribe for a <span>25% Discount</span></h2>
-<p>Nulla ac convallis lorem, eget euismod nisl. Donec in libero sit amet mi vulputate consectetur. Donec auctor interdum purus, ac finibus massa bibendum nec.</p>
-</div>
-</div>
-
-<div class="col-12 col-lg-6 col-xl-5">
-<div class="newsletter-form mb-100">
-<form action="#" method="post">
-<input type="email" name="email" class="nl-email" placeholder="Your E-mail">
-<input type="submit" value="Subscribe">
-</form>
-</div>
-</div>
-</div>
-</div>
-</section>
 
 
-<footer class="footer_area clearfix">
-<div class="container">
-<div class="row align-items-center">
 
-<div class="col-12 col-lg-4">
-<div class="single_widget_area">
-
-<div class="footer-logo mr-50">
-<a href="index-2.html"><img src="static/img/core-img/logo2.png" alt=""></a>
-</div>
-
-<p class="copywrite">
-Copyright &copy;<script type="3b61281cb66cedf27aad9b00-text/javascript">document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
-</p>
-</div>
-</div>
-
-<div class="col-12 col-lg-8">
-<div class="single_widget_area">
-
-<div class="footer_menu">
-<nav class="navbar navbar-expand-lg justify-content-end">
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#footerNavContent" aria-controls="footerNavContent" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
-<div class="collapse navbar-collapse" id="footerNavContent">
-<ul class="navbar-nav ml-auto">
-<li class="nav-item active">
-<a class="nav-link" href="/">Home</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="shop.html">Shop</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="product-details.html">Product</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="cart.html">Cart</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="checkout.html">Checkout</a>
-</li>
-</ul>
-</div>
-</nav>
-</div>
-</div>
-</div>
-</div>
-</div>
-</footer>
 
 
 <script src="static/js/jquery/jquery-2.2.4.min.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
@@ -270,13 +164,13 @@ Copyright &copy;<script type="3b61281cb66cedf27aad9b00-text/javascript">document
 <script src="static/js/active.js" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="3b61281cb66cedf27aad9b00-text/javascript"></script>
-<script type="3b61281cb66cedf27aad9b00-text/javascript">
+<!-- <script type="3b61281cb66cedf27aad9b00-text/javascript">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-23581568-13');
-</script>
+</script> -->
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/95c75768/cloudflare-static/rocket-loader.min.js" data-cf-settings="3b61281cb66cedf27aad9b00-|49" defer=""></script></body>
 
 <!-- Mirrored from colorlib.com/preview/theme/amado/cart.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Oct 2019 17:00:46 GMT -->
