--- a/templates/login2.html
+++ b/templates/login2.html
@@ -75,7 +75,7 @@
             <div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
                 <form
                     method="POST"
-                    action="{{ url_for('register') }}"
+                    action="{{ url_for('login') }}"
                     class="login100-form validate-form"
                 >
                     <span class="login100-form-title p-b-37">
