--- a/templates/login2.html
+++ b/templates/login2.html
@@ -6,7 +6,7 @@
         content="text/html;charset=UTF-8"
     /><!-- /Added by HTTrack -->
     <head>
-        <title>Register</title>
+        <title>Login</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
